# human_face_recognize

./: .clang-format  .gitignore  CMakeLists.txt  README.md  common.h  image_reader.cpp  image_reader.h  image_shower.hpp  main.cpp  pca.hpp  pca_with_evd.h  pca_with_svd.h  process.sh  read_img.cpp  show  show.cpp
deprecate/: ECA_decompose.cpp  read_img.cpp
